// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/OrderPage/actions/closeDetailModal should closeDetailModal should create closeDetailModal action 1`] = `
Object {
  "type": "atomicapp/OrderPage/SWAP_DETAIL_MODAL_CLOSE",
}
`;

exports[`containers/OrderPage/actions/closeJoyride should closeJoyride should create closeJoyride action 1`] = `
Object {
  "type": "atomicapp/OrderPage/JOYRIDE_CLOSE",
}
`;

exports[`containers/OrderPage/actions/loadOrderbook should loadOrderbook should create loadOrderbook action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/ORDERBOOK_LOAD",
}
`;

exports[`containers/OrderPage/actions/loadOrderbookError should loadOrderbookError should create loadOrderbookError action 1`] = `
Object {
  "error": Object {
    "context": Object {
      "action": "atomicapp/OrdersPage/ORDERBOOK_LOAD",
    },
    "message": "message",
    "type": "RPC",
  },
  "type": "atomicapp/OrdersPage/ORDERBOOK_LOAD_ERROR",
}
`;

exports[`containers/OrderPage/actions/loadOrderbookSuccess should loadOrderbookSuccess should create loadOrderbookSuccess action 1`] = `
Object {
  "payload": Object {
    "askdepth": 0,
    "asks": Array [
      Object {
        "address": "12fj3npPKwTNxUgDMN8XcCDcR2Z4DBehj6",
        "age": 1,
        "avevolume": 0,
        "coin": "BTC",
        "depth": 0,
        "maxvolume": 0.15931538,
        "numutxos": 0,
        "price": 11765.318803369999,
        "pubkey": "dbd8c73e2e80e4f3cf88d2f04a9d2d0df4269496608b14a3e17556fdcb01e0c1",
        "zcredits": 0,
      },
      Object {
        "address": "1JsAjr6d21j9T8EMsYnQ6GXf1mM523JAv1",
        "age": 9,
        "avevolume": 0,
        "coin": "BTC",
        "depth": 0,
        "maxvolume": 0.10416148,
        "numutxos": 0,
        "price": 11751.74655523,
        "pubkey": "1bb83b58ec130e28e0a6d5d2acf2eb01b0d3f1670e021d47d31db8a858219da8",
        "zcredits": 0,
      },
    ],
    "base": "BTC",
    "biddepth": 0,
    "bids": Array [
      Object {
        "address": "RRVJBpA5MoeTo3beA1iP6euWWrWcJdJtXu",
        "age": 1,
        "avevolume": 0,
        "coin": "KMD",
        "depth": 0,
        "maxvolume": 570.67205239,
        "numutxos": 0,
        "price": 11636.025133814292,
        "pubkey": "dbd8c73e2e80e4f3cf88d2f04a9d2d0df4269496608b14a3e17556fdcb01e0c1",
        "zcredits": 0,
      },
      Object {
        "address": "RT9MpMyucqXiX8bZLimXBnrrn2ofmdGNKd",
        "age": 9,
        "avevolume": 0,
        "coin": "KMD",
        "depth": 0,
        "maxvolume": 19956.77585582,
        "numutxos": 0,
        "price": 11622.501162250117,
        "pubkey": "1bb83b58ec130e28e0a6d5d2acf2eb01b0d3f1670e021d47d31db8a858219da8",
        "zcredits": 0,
      },
      Object {
        "address": "RHy2obsEHhAdTag4fDsC4SfCEqm5ZzTUSH",
        "age": 8,
        "avevolume": 0,
        "coin": "KMD",
        "depth": 0,
        "maxvolume": 208.21649055,
        "numutxos": 0,
        "price": 8333.333333333332,
        "pubkey": "98d2273b6580b2b3d5c35e43bb7176dc8e60af60e19ec2bfdfb0b40b7ccde792",
        "zcredits": 0,
      },
    ],
    "netid": 0,
    "numasks": 2,
    "numbids": 3,
    "rel": "KMD",
    "timestamp": 1565070353,
  },
  "type": "atomicapp/OrdersPage/ORDERBOOK_LOAD_SUCCESS",
}
`;

exports[`containers/OrderPage/actions/openDetailModal should openDetailModal should create openDetailModal action 1`] = `
Object {
  "payload": Object {
    "uuid": undefined,
  },
  "type": "atomicapp/OrderPage/SWAP_DETAIL_MODAL_OPEN",
}
`;

exports[`containers/OrderPage/actions/openDetailModal should openDetailModal should create openDetailModal action 2`] = `
Object {
  "payload": Object {
    "uuid": "uuid",
  },
  "type": "atomicapp/OrderPage/SWAP_DETAIL_MODAL_OPEN",
}
`;

exports[`containers/OrderPage/actions/openJoyride should openJoyride should create openJoyride action 1`] = `
Object {
  "type": "atomicapp/OrderPage/JOYRIDE_OPEN",
}
`;

exports[`containers/OrderPage/actions/reloadOrderbook should reloadOrderbook should create reloadOrderbook action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/ORDERBOOK_RELOAD",
}
`;

exports[`containers/OrderPage/actions/skipOrderbook should skipOrderbook should create skipOrderbook action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/ORDERBOOK_LOAD_SKIP",
}
`;

exports[`containers/OrdersPage/actions/cancelNewOrder should cancelNewOrder should create cancelNewOrder action 1`] = `
Object {
  "payload": Object {
    "id": "id",
    "uuid": "uuid",
  },
  "type": "atomicapp/OrdersPage/NEW_ORDER_CANCEL",
}
`;

exports[`containers/OrdersPage/actions/cancelNewOrderSuccess should cancelNewOrderSuccess should create cancelNewOrderSuccess action 1`] = `
Object {
  "payload": Object {
    "id": "id",
  },
  "type": "atomicapp/OrdersPage/NEW_ORDER_CANCEL_SUCCESS",
}
`;

exports[`containers/OrdersPage/actions/closeCancelingOrderModal should closeCancelingOrderModal should create closeCancelingOrderModal action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/CANCELING_ORDER_MODAL_CLOSE",
}
`;

exports[`containers/OrdersPage/actions/closeConfirmNewOrderModal should closeConfirmNewOrderModal should create closeConfirmNewOrderModal action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/CONFIRM_NEW_ORDER_MODAL_CLOSE",
}
`;

exports[`containers/OrdersPage/actions/closeDepositCoinModal should closeDepositCoinModal should create closeDepositCoinModal action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/DEPOSIT_COIN_MODAL_CLOSE",
}
`;

exports[`containers/OrdersPage/actions/closeRecevieCoinModal should closeRecevieCoinModal should create closeRecevieCoinModal action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/RECEVIE_COIN_MODAL_CLOSE",
}
`;

exports[`containers/OrdersPage/actions/openCancelingOrderModal should openCancelingOrderModal should create openCancelingOrderModal action 1`] = `
Object {
  "payload": Object {
    "id": "id",
  },
  "type": "atomicapp/OrdersPage/CANCELING_ORDER_MODAL_OPEN",
}
`;

exports[`containers/OrdersPage/actions/openConfirmNewOrderModal should openConfirmNewOrderModal should create openConfirmNewOrderModal action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/CONFIRM_NEW_ORDER_MODAL_OPEN",
}
`;

exports[`containers/OrdersPage/actions/openDepositCoinModal should openDepositCoinModal should create openDepositCoinModal action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/DEPOSIT_COIN_MODAL_OPEN",
}
`;

exports[`containers/OrdersPage/actions/openRecevieCoinModal should openRecevieCoinModal should create openRecevieCoinModal action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/RECEVIE_COIN_MODAL_OPEN",
}
`;

exports[`containers/OrdersPage/actions/setNewOrder should setNewOrder should create setNewOrder action 1`] = `
Object {
  "payload": Object {
    "price": 0.1,
  },
  "type": "atomicapp/OrdersPage/NEW_ORDER_SET",
}
`;

exports[`containers/OrdersPage/actions/setNewOrderError should setNewOrderError should create setNewOrderError action 1`] = `
Object {
  "error": undefined,
  "type": "atomicapp/OrdersPage/NEW_ORDER_SET_ERROR",
}
`;

exports[`containers/OrdersPage/actions/setNewOrderSuccess should setNewOrderSuccess should create setNewOrderSuccess action 1`] = `
Object {
  "payload": Object {
    "base": "BEER",
    "created_at": 1559621086489,
    "matches": Object {},
    "max_base_vol": "6729.6392886",
    "min_base_vol": "0",
    "price": "0.1000000000000000",
    "rel": "COQUI",
    "started_swaps": Array [],
    "uuid": "89b47c5b-f441-46c4-aea1-279f6ea0d67d",
  },
  "type": "atomicapp/OrdersPage/NEW_ORDER_SET_SUCCESS",
}
`;

exports[`containers/OrdersPage/actions/skipNewOrder should skipNewOrder should create skipNewOrder action 1`] = `
Object {
  "type": "atomicapp/OrdersPage/NEW_ORDER_SET_SKIP",
}
`;
